@@ -7,6 +7,13 @@ cdebconf (0.60) UNRELEASED; urgency=low
       questions of type note, error and multiselect (and also select
       when extended description is very long and displayed in a
       separate window).
+    - Add a --merge command-line flag to debconf-loadtemplate.
+      When debconf-loadtemplate reads templates files, the default
+      behavior is to replace existing templates with the new
+      definitions.  With this flag, translations are added to already
+      existing templates.  But if English text differs, outdated
+      translations are removed as if this flag was unset.
+      Closes: #212921
 
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 19:48:24 -0500
 
